# RunnerStepEstimation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
cmake/: OpenCV.cmake  matplotlib.cmake
html/: files.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html
html/search/: pages_0.js  searchdata.js
latex/: files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex
plotData/0/: LAnkle_LEar.txt  LAnkle_LShoulder.txt  LAnkle_LWrist.txt  LAnkle_Neck.txt  LAnkle_Nose.txt  LAnkle_RAnkle.txt  LAnkle_RHip.txt  LAnkle_RKnee.txt  LAnkle_RShoulder.txt  LAnkle_RWrist.txt  LEar_LHip.txt  LEar_LKnee.txt  LEar_LShoulder.txt  LEar_LWrist.txt  LEar_Nose.txt  LEar_RAnkle.txt  LEar_REar.txt  LEar_RElbow.txt  LEar_RKnee.txt  LElbow_LAnkle.txt  LElbow_LEar.txt  LElbow_LHip.txt  LElbow_LShoulder.txt  LElbow_LWrist.txt  LElbow_RAnkle.txt  LElbow_REar.txt  LElbow_RElbow.txt  LElbow_RWrist.txt  LEye_LAnkle.txt  LEye_LEar.txt  LEye_LElbow.txt  LEye_LShoulder.txt  LEye_Nose.txt  LHip_LAnkle.txt  LHip_LKnee.txt  LHip_LWrist.txt  LHip_Neck.txt  LHip_RElbow.txt  LKnee_LAnkle.txt  LKnee_LElbow.txt  (+114 more)
plotData/1/: LAnkle_LElbow.txt  LAnkle_LEye.txt  LAnkle_LHip.txt  LAnkle_LShoulder.txt  LAnkle_Neck.txt  LAnkle_Nose.txt  LAnkle_RAnkle.txt  LAnkle_REar.txt  LAnkle_RElbow.txt  LAnkle_REye.txt  LAnkle_RWrist.txt  LEar_LAnkle.txt  LEar_LElbow.txt  LEar_LEye.txt  LEar_REar.txt  LEar_REye.txt  LEar_RHip.txt  LEar_RShoulder.txt  LEar_RWrist.txt  LElbow_LEye.txt  LElbow_Neck.txt  LElbow_RElbow.txt  LElbow_REye.txt  LElbow_RShoulder.txt  LElbow_RWrist.txt  LEye_LHip.txt  LEye_LKnee.txt  LEye_LShoulder.txt  LEye_Neck.txt  LEye_REye.txt  LEye_RKnee.txt  LEye_RWrist.txt  LHip_LEar.txt  LHip_LElbow.txt  LHip_LWrist.txt  LHip_Nose.txt  LHip_RHip.txt  LHip_RShoulder.txt  LHip_RWrist.txt  LKnee_LAnkle.txt  (+132 more)
plotData/2/: LAnkle_LElbow.txt  LAnkle_Neck.txt  LAnkle_Nose.txt  LAnkle_RAnkle.txt  LAnkle_RKnee.txt  LAnkle_RShoulder.txt  LEar_LAnkle.txt  LEar_LElbow.txt  LEar_REar.txt  LEar_RHip.txt  LEar_RShoulder.txt  LEar_RWrist.txt  LElbow_LHip.txt  LElbow_LKnee.txt  LElbow_LWrist.txt  LElbow_RElbow.txt  LElbow_RKnee.txt  LElbow_RWrist.txt  LEye_LWrist.txt  LHip_LAnkle.txt  LHip_LEar.txt  LHip_LWrist.txt  LHip_Neck.txt  LHip_RAnkle.txt  LHip_REar.txt  LHip_RKnee.txt  LHip_RShoulder.txt  (+97 more)
src/: CMakeLists.txt  calcLiniorEquation.cpp  calcLiniorEquation.h  click4corners.cpp  click_panorama.cpp  findHomographyMatrix.cpp  loadImage.cpp  loadOpenPoseData.cpp  maskTeropArea.cpp  nDegreeApproximation.cpp  nDegreeApproximation.h  panorama.cpp  panorama.h  trackingRunner.cpp  trackingTrack.cpp  virtualRace.cpp  virtualRace.h
src/basicFunction/: CMakeLists.txt  basicFunction.cpp  basicFunction.h
src/complimentFootprints/: CMakeLists.txt  RANSAC.cpp  RANSAC.h
src/openpose/: CMakeLists.txt  exportHumanPoseTxt.cpp  myOpenPose.h
src/plotRunnerPose/: CMakeLists.txt  matplotlib.h  mymatplot.cpp  mymatplot.h
src/videoToImage/: CMakeLists.txt  trimVideo.cpp  trimVideo.h  videoToImage.cpp  videoToImage.h
(+723 files in other folders)
